--- a/src/app/Components/directeur-dashboard/ajouter-enseignant.component.html
+++ b/src/app/Components/directeur-dashboard/ajouter-enseignant.component.html
@@ -2,7 +2,7 @@
     <h1 class="page-title">Ajouter un Enseignant</h1> <!-- Enhanced title styling -->
 
     <div class="text-right mb-3">
-        <a routerLink="/directeur-dashboard" class="btn btn-secondary">
+        <a routerLink="/directeur-dashboard" class="btn btn-primary">
             <i class="glyphicon glyphicon-arrow-left"></i> Retour
         </a>
     </div> <!-- Back button -->
@@ -128,7 +128,7 @@
             <div class="form-group">
                 <label class="col-md-4 control-label"></label>
                 <div class="col-md-4">
-                    <button type="submit" class="btn btn-warning">
+                    <button type="submit" class="btn btn-primary">
                         Ajouter <span class="glyphicon glyphicon-plus"></span>
                     </button>
                 </div>
