--- a/src/app/Components/directeur-dashboard/modifier-enseignant.component.html
+++ b/src/app/Components/directeur-dashboard/modifier-enseignant.component.html
@@ -3,7 +3,7 @@
 
     <!-- Bouton de retour -->
     <div class="text-right mb-3">
-        <a routerLink="/directeur-dashboard" class="btn btn-secondary">
+        <a routerLink="/directeur-dashboard" class="btn btn-primary">
             <i class="glyphicon glyphicon-arrow-left"></i> Retour
         </a>
     </div>
@@ -112,7 +112,7 @@
             <div class="form-group">
                 <label class="col-md-4 control-label"></label>
                 <div class="col-md-4">
-                    <button type="submit" class="btn btn-warning">
+                    <button type="submit" class="btn btn-primary">
                         Modifier <span class="glyphicon glyphicon-pencil"></span>
                     </button>
                 </div>
