--- a/src/app/Components/etudiant-notes/etudiant-notes.component.html
+++ b/src/app/Components/etudiant-notes/etudiant-notes.component.html
@@ -1,6 +1,14 @@
-<!-- <p>etudiant-notes works!</p> -->
+<div class="header">
+  <app-header></app-header>
+</div>
 
-<table class="table table-striped table-hover">
+<a style="align-items: center; margin-left: 20px;" routerLink="/etudiant-dashboard" class="btn btn-primary">
+  <i class="glyphicon glyphicon-arrow-left"></i> 
+  <!-- <i class="fas fa-arrow-left"></i> -->
+</a>
+
+<div class="table-wrapper">
+  <table class="table table-striped table-hover">
     <thead class="thead-dark">
       <tr>
         <th scope="col">Module</th>
@@ -14,3 +22,4 @@
       </tr>
     </tbody>
   </table>
+</div>
