--- a/src/app/Components/module/module.component.html
+++ b/src/app/Components/module/module.component.html
@@ -1,7 +1,10 @@
+<div class="header">
+    <app-header></app-header>
+  </div>
 <div class="module-container">
     <div class="text-right mb-3">
-        <a routerLink="/dashboard" class="btn btn-secondary">
-            <i class="glyphicon glyphicon-arrow-left"></i> Retour
+        <a routerLink="/dashboard" class="btn btn-primary">
+            <i class="glyphicon glyphicon-arrow-left"></i> 
         </a>
     </div>
     <h2>Gestion des Modules</h2>
