--- a/src/app/Components/directeur-dashboard/directeur-dashboard.component.css
+++ b/src/app/Components/directeur-dashboard/directeur-dashboard.component.css
@@ -19,7 +19,7 @@ body {
 
 .table-title {
     padding-bottom: 15px;
-    background: #435d7d;
+    background: #fff;
     color: #fff;
     padding: 16px 30px;
     margin: -20px -25px 10px;
@@ -153,5 +153,6 @@ body {
     background-color: #435d7d;
     color: #fff;
 }
+
 
 
