--- a/src/app/Components/formation/formation.component.css
+++ b/src/app/Components/formation/formation.component.css
@@ -160,4 +160,43 @@
     background-color: #f8d7da;
     color: #721c24;
   }
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .logo img {
+    height: 70px;
+    width: 100px;
+  }
+  
+  ul {
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+  }
+  
+  ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    font-size: large;
+  }
+  
+  .logout-btn {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: large;
+  }
+  
   
