--- a/src/app/Components/formation/formation.component.html
+++ b/src/app/Components/formation/formation.component.html
@@ -1,7 +1,21 @@
+
+<nav class="navbar">
+  <div class="logo">
+    <img src="assets/logo.png" alt="ENSATE LOGO" width="80" />
+  </div>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/contact">Contact</a></li>
+    <li><a href="/services">Services</a></li>
+  </ul>
+  <button class="logout-btn" (click)="logout()">Logout</button>
+  
+</nav>
+
 <div class="formation-container">
     <div class="text-right mb-3">
-        <button (click)="goBack()" class="btn btn-secondary">
-            <i class="glyphicon glyphicon-arrow-left"></i> Retour
+        <button (click)="goBack()" class="btn btn-primary">
+            <i class="glyphicon glyphicon-arrow-left"></i> 
         </button>
     </div>
     <h2>Formations</h2>
