--- a/src/app/Components/etudiant-dashboard/etudiant-dashboard.component.html
+++ b/src/app/Components/etudiant-dashboard/etudiant-dashboard.component.html
@@ -28,6 +28,13 @@
       <h3>Stages</h3>
       <p>Gestion des stages.</p>
     </a>
+    <a class="service-card" [routerLink]="['/matiers']">
+      <div class="icon">
+        <img src="assets/icons/stages-icon.png" alt="Stages" width="40" />
+      </div>
+      <h3>Cours</h3>
+      <p>Consulter les cours.</p>
+    </a>
   
     <a class="service-card" [routerLink]="['/etuNotes']">
       <div class="icon">
