--- a/src/app/Components/enseignant-dashboard/enseignant-dashboard.component.html
+++ b/src/app/Components/enseignant-dashboard/enseignant-dashboard.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <section class="logout-section">
-    <button class="logout-button" (click)="logout()">Déconnexion</button>
+    <button class="logout-btn" (click)="logout()">Logout</button>
   </section>
 
   <section class="matieres-section">
